XOR-547 [Fix] Fixes UI error for when the last sent message is too long to display (#132)

--- a/css/chat.css
+++ b/css/chat.css
@@ -481,8 +481,10 @@ html.no-supports-container.native body,
 }
 
 .chat-card-holder .chat-participants-preview,
-.chat-card-holder .chat-participants-preview + .chat-user-preview {
+.chat-card-holder .chat-participants-preview + .chat-user-preview,
+.chat-card-holder .chat-user-preview {
   -webkit-line-clamp: 1;
+  word-break: break-all;
 }
 
 .contact-card.contact-selected .contact-user-preview {
